# devtools

./: package.json  pnpm-workspace.yaml  pyproject.toml
common/cli/dt-core/: pyproject.toml
common/cli/dt-core/src/dt_core/: __init__.py  main.py  node_loader.py  python_loader.py
nab/cli/foo/: dt-plugin.yaml  package.json
nab/cli/foo/src/: cli.ts
nab/cli/metan/: pyproject.toml
nab/cli/metan/src/metan/: __init__.py  cli.py
scripts/: doctor.sh  export-requirements.sh  generate-registry.py  install-all.sh
tinybots/local/: .env.example  Justfile  docker-compose.yaml
tinybots/local/justfiles/: atlas.just  azi-3-status-check-jobs.just  database.just  m-o-triggers.just  megazord-events.just  micro-manager.just  sensara-adaptor.just  wonkers-ecd.just  wonkers-graphql.just
tinybots/local/localstack/: create-queues.sh
tinybots/local/prisma/dashboard/: schema.prisma
tinybots/local/prisma/tinybots/: schema.prisma
tinybots/local/src/config/: db.ts
tinybots/local/src/seed/: run.ts
tinybots/local/src/seed/units/: MicroManagerTriggeredApisSeed.ts  RobotAccountSeed.ts  ScriptExecutionSeed.ts  ScriptReferenceSeed.ts  ScriptVersionSeed.ts  TaskScheduleSeed.ts
vocalmeet/local/: .env.example  .gitignore  Dockerfile.wordpress  Justfile  docker-compose-assessment.yaml
vocalmeet/local/justfiles/: _common.just  assessment.just  db.just  dev.just  logs.just  services.just  ssl.just  wp.just
vocalmeet/local/nginx/: nginx.conf
vocalmeet/local/php/: xdebug.ini
vocalmeet/local/scripts/: fix-htaccess.sh  generate-ssl.sh
vocalmeet/local/ssl/: .gitignore
