[project]
name = "metan"
version = "0.1.0"
description = "Metan domain tools"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "dt-core",
]

[project.entry-points."dt.plugins"]
metan = "metan.cli:app"

[tool.uv.sources]
dt-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/metan"]
